--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-webpack": "^5.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
