--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "node": true,
+    "jasmine": true
   },
   "extends": "airbnb-base",
   "parserOptions": {
@@ -15,5 +16,6 @@
     "no-underscore-dangle": 0,
     "no-restricted-globals": 0,
     "linebreak-style": 0
-  }
+  },
+  "plugins": ["jasmine"]
 }
