--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jasmine": "^4.1.3",
     "html-webpack-plugin": "^5.5.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
@@ -28,6 +29,7 @@
     "jasmine-core": "^4.2.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.1.1",
+    "karma-eslint": "^2.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.2",
     "karma-sourcemap-loader": "^0.3.8",
