--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,10 @@
     "browser": true,
     "es2021": true,
     "node": true,
-    "jasmine": true
+    "jasmine": true,
+    "codeceptjs/codeceptjs": true
   },
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "plugin:codeceptjs/recommended"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -17,5 +18,5 @@
     "no-restricted-globals": 0,
     "linebreak-style": 0
   },
-  "plugins": ["jasmine"]
+  "plugins": ["jasmine", "codeceptjs"]
 }
