--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "karma start"
+    "test": "karma start",
+    "lint": "eslint ./src",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -16,6 +18,7 @@
     "@babel/preset-env": "^7.22.9",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "babel-loader": "^8.3.0",
+    "codeceptjs": "^3.5.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
@@ -34,6 +37,7 @@
     "karma-jasmine": "^4.0.2",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
+    "puppeteer": "^20.8.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
     "webpack-bundle-analyzer": "^4.9.0",
