--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "codeceptjs": "^3.5.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-codeceptjs": "^1.3.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jasmine": "^4.1.3",
     "html-webpack-plugin": "^5.5.3",
