--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack --config webpack.prod.js",
     "test": "karma start",
     "lint": "eslint ./src",
-    "e2e": "codeceptjs run --steps"
+    "e2e": "codeceptjs run --steps",
+    "build-image": "node sharp.js",
+    "serve": "http-server dist --port 9000"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -28,6 +30,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jasmine": "^4.1.3",
     "html-webpack-plugin": "^5.5.3",
+    "http-server": "^14.1.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
@@ -40,6 +43,7 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
     "puppeteer": "^20.8.2",
+    "sharp": "^0.32.3",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
     "uglify-js": "^3.17.4",
